2002-04-29  Anders Carlsson  <andersca@gnu.org>

	* Release 1.116.0

	* libgnomeui/gnome-app-helper.c:
	(menus_have_tearoff_changed_notify), (gnome_app_fill_menu_custom):
	* libgnomeui/gnome-app.c: (remove_notification_cb),
	(dock_item_changed_notify), (setup_notification_for_dock_item),
	(gnome_app_set_menus), (gnome_app_add_toolbar),
	(gnome_app_add_docked):
	* libgnomeui/gnome-icon-item.c: (iti_draw_cursor),
	(gnome_icon_text_item_draw):
	Add support for toggling the tear-off menus and wether menu bars
	can be detachable on-the-fly.
	
2002-04-29  Anders Carlsson  <andersca@gnu.org>

	* libgnomeui/gnome-dateedit.c: (gnome_date_edit_mnemonic_activate),
	(gnome_date_edit_class_init):
	* libgnomeui/gnome-entry.c: (gnome_entry_mnemonic_activate),
	(gnome_entry_class_init):
	* libgnomeui/gnome-file-entry.c:
	(gnome_file_entry_mnemonic_activate),
	(gnome_file_entry_class_init):
	* libgnomeui/gnome-icon-entry.c: (gnome_icon_entry_class_init),
	(delete_event_handler), (ientry_mnemonic_activate):
	Connect to ::mnemonic_activate so that mnemonic activation will work
	for the entries. Fixes #78941.
	
2002-04-29  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/gnome-app-helper.c: Change to use the HIG
	  recommendation of Quit instead of Exit.
	* libgnomeui/gnome-app-helper.h: Add compatibility defines
	  for above changes.
	* libgnomeui/gnome-uidefs.h:  Add compatibility defines for
	  above changes.
	* libgnomeui/gnome-appbar.c: (gnome_appbar_get_response): 
	  Remove an g_return_val_if_fail which is not needed.

2002-04-27  Simos Xenitellis  <simos@hellug.gr>

	* configure.in: Added Greek (el) to ALL_LINGUAS. 

2002-04-26  Bill Nottingham <notting@redhat.com>

	* libgnomeui/gnome-font-picker.h: fix spelling in comments

2002-04-25  Jody Goldberg <jody@gnome.org>

	* libgnomeui/gnome-app-helper.c (toolbar_styles) : add BOTH_HORIZ.
	(create_and_popup_toolbar_menu) : ditto.

2002-04-18  Murray Cumming  <murrayc@usa.net>
