@@ -1,3 +1,8 @@
+2002-04-29  jacob berkman  <jacob@ximian.com>
+
+	* libgnomeui/gnome-app-helper.h (GNOMEUIINFO_MENU_EXIT_ITEM):
+	un-deprecate as this broke stuff
+
 2002-04-29  Anders Carlsson  <andersca@gnu.org>
 
 	* Release 1.116.0
